# mpcc

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt
cmake/: AcadosUtils.cmake  FindACADOS.cmake  FindBLASFEO.cmake  FindHPIPM.cmake  Findnlopt.cmake
include/PathPlanning/: gaussian_potential_field.hpp  goal_obstacle.hpp
include/mpcc/: arutils.h  logger.h  mpcc_acados.h  mpcc_base.h  mpcc_core.h  mpcc_di_acados.h  mpcc_impl.h  mpcc_nlopt_impl.h  mpcc_ros.h  spline.h  spline_lib.h  types.h  utils.h
include/uav_mpc/: mpcc_acados.h  mpcc_core.h  mpcc_impl.h  mpcc_nlopt_impl.h  mpcc_ros.h  spline.h  spline_lib.h  types.h  utils.h
include/uav_mpc/unicycle_mpcc/: acados_sim_solver_unicycle_model.h  acados_solver_unicycle_model.c  acados_solver_unicycle_model.h  main_unicycle_model.c
include/uav_mpc/unicycle_mpcc/unicycle_model_model/: unicycle_model_impl_dae_fun.c  unicycle_model_model.h
launch/: gmapping.launch  jackal_di_track.launch  jackal_mpc_track.launch  mvsim.launch  record_bag.launch  uav_mpc_track.launch
msg/: RLState.msg
params/: di_mpcc.yaml  di_robo_params.yaml  double_integrator_mpcc.yaml  local_costmap_params.yaml  mapper_params_online_async.yaml  mpcc.yaml  robo_params.yaml  track_acc_ipopt.yaml  train.yaml  train_di.yaml  uav_local_costmap_params.yaml  uav_params.yaml  unicycle_model_mpcc.yaml
rviz/: experiment_jackal.rviz  planner.rviz
scripts/: di_to_uni_cmd_mapper.py  diffeo_cbf_demo.py  diffeo_ros.py  diffeomorph_softmax.py  diffeomorphism.py  dynamic_obs.py  tube_gen.py
scripts/double_integrator_mpcc/: mpcc_model.py  mpcc_ocp.py
scripts/for_paper/: plot_alpha_live_from_bag.py  plot_pkl_data.py
scripts/train/: gazebo_simulation.py  model_server.py  model_server_di.py  out.txt  simple_simulation.py  train_realworld.py  train_realworld_di.py  train_sac.py  train_sac_simple.py
scripts/tube_gen/: tube_lp_gen.py  tube_lp_ros.py
scripts/tube_gen/LP_codegen/: README.html  cpg_solver.py  problem.pickle  setup.py
scripts/tube_gen/LP_codegen/c/: CMakeLists.txt
scripts/tube_gen/LP_codegen/c/include/: cpg_solve.h  cpg_workspace.h
scripts/tube_gen/LP_codegen/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
scripts/tube_gen/LP_codegen/cpp/include/: cpg_module.hpp
scripts/tube_gen/LP_codegen/cpp/src/: cpg_module.cpp
scripts/unicycle_gtg/: acados_ocp.json  unicycle_model.py  unicycle_ocp.py
scripts/unicycle_gtg/c_generated_code/: Makefile  acados_sim_solver_unicycle_model.c  acados_sim_solver_unicycle_model.h  acados_solver.pxd  acados_solver_unicycle_model.c  acados_solver_unicycle_model.h  main_sim_unicycle_model.c  main_unicycle_model.c
scripts/unicycle_gtg/c_generated_code/unicycle_model_model/: unicycle_model_expl_ode_fun.c  unicycle_model_expl_ode_hess.c  unicycle_model_expl_vde_adj.c  unicycle_model_expl_vde_forw.c  unicycle_model_impl_dae_fun.c  unicycle_model_impl_dae_fun_jac_x_xdot_u.c  unicycle_model_impl_dae_fun_jac_x_xdot_u_z.c  unicycle_model_impl_dae_fun_jac_x_xdot_z.c  unicycle_model_impl_dae_hess.c  unicycle_model_impl_dae_jac_x_xdot_u_z.c
scripts/unicycle_model_mpcc/: mpcc_model.py  mpcc_ocp.py  mpcc_ocp_horizon_sim.py  mpcc_ocp_tube_sim.py
scripts/unicycle_mpc_cte/: acados_ocp.json  mpc_cte_model.py  mpc_cte_ocp.py
scripts/unicycle_mpc_cte/c_generated_code/: Makefile
scripts/unicycle_mpc_cte/c_generated_code/unicycle_model_model/: unicycle_model_impl_dae_fun_jac_x_xdot_z.c  unicycle_model_impl_dae_jac_x_xdot_u_z.c
scripts/unicycle_mpcc/: acados_ocp.json  mpcc_model.py  mpcc_ocp.py  mpcc_ocp_horizon.py  mpcc_ocp_horizon_sim.py  mpcc_ocp_tube_sim.py  tube_lp_gen.py
scripts/unicycle_mpcc/c_generated_code/: Makefile  acados_sim_solver_unicycle_model.c  acados_sim_solver_unicycle_model_mpcc.c  acados_sim_solver_unicycle_model_mpcc.h  acados_solver.pxd  acados_solver_unicycle_model_mpcc.c  acados_solver_unicycle_model_mpcc.h  main_sim_unicycle_model.c  main_sim_unicycle_model_mpcc.c  main_unicycle_model_mpcc.c
scripts/unicycle_mpcc/c_generated_code/unicycle_model_model/: unicycle_model_impl_dae_fun_jac_x_xdot_u.c  unicycle_model_impl_dae_fun_jac_x_xdot_u_z.c
scripts/unicycle_mpcc/c_generated_code/unicycle_model_mpcc_constraints/: unicycle_model_mpcc_constr_h_0_fun.c  unicycle_model_mpcc_constr_h_0_fun_jac_uxt_zt.c  unicycle_model_mpcc_constr_h_0_fun_jac_uxt_zt_hess.c  unicycle_model_mpcc_constr_h_fun.c  unicycle_model_mpcc_constr_h_fun_jac_uxt_zt.c  unicycle_model_mpcc_constr_h_fun_jac_uxt_zt_hess.c  unicycle_model_mpcc_constraints.h
scripts/unicycle_mpcc/c_generated_code/unicycle_model_mpcc_cost/: unicycle_model_mpcc_cost.h  unicycle_model_mpcc_cost_ext_cost_0_fun.c  unicycle_model_mpcc_cost_ext_cost_0_fun_jac.c  unicycle_model_mpcc_cost_ext_cost_0_fun_jac_hess.c  unicycle_model_mpcc_cost_ext_cost_e_fun.c  unicycle_model_mpcc_cost_ext_cost_e_fun_jac.c  unicycle_model_mpcc_cost_ext_cost_e_fun_jac_hess.c  unicycle_model_mpcc_cost_ext_cost_fun.c  unicycle_model_mpcc_cost_ext_cost_fun_jac.c  unicycle_model_mpcc_cost_ext_cost_fun_jac_hess.c
scripts/unicycle_mpcc/c_generated_code/unicycle_model_mpcc_model/: unicycle_model_mpcc_expl_ode_fun.c  unicycle_model_mpcc_expl_ode_hess.c  unicycle_model_mpcc_expl_vde_adj.c  unicycle_model_mpcc_expl_vde_forw.c  unicycle_model_mpcc_model.h
src/: mpcc_acados.cpp  mpcc_core.cpp  mpcc_impl.cpp  mpcc_nlopt_impl.cpp  mpcc_node.cpp  mpcc_ros.cpp  test.cpp  unicycle_mpcc.cpp
src/mpcc/: .mpcc_ros.cpp.swo  logger.cpp  mpcc_acados.cpp  mpcc_core.cpp  mpcc_di_acados.cpp  mpcc_impl.cpp  mpcc_nlopt_impl.cpp  mpcc_node.cpp  mpcc_ros.cpp  test.cpp  unicycle_mpcc.cpp
src/utils/: arutils.cpp  local_costmap.cpp  publish_pf_pose.cpp
srv/: QuerySAC.srv  QuerySACDI.srv
